--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ set(container_readers ${container_readers} reader_mp4)
 set(container_writers ${container_writers} writer_mp4)
 add_subdirectory(mpeg)
 set(container_readers ${container_readers} reader_ps)
+set(container_readers ${container_readers} reader_ts)
 add_subdirectory(mpga)
 set(container_readers ${container_readers} reader_mpga)
 add_subdirectory(binary)
