--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,9 @@ set(container_readers ${container_readers} reader_avi)
 set(container_writers ${container_writers} writer_avi)
 add_subdirectory(rtp)
 set(container_readers ${container_readers} reader_rtp)
+add_subdirectory(rtpdump)
+set(container_readers ${container_readers} reader_rtpdump)
+set(container_writers ${container_writers} writer_rtpdump)
 add_subdirectory(rtsp)
 set(container_readers ${container_readers} reader_rtsp)
 add_subdirectory(rcv)
