--- a/metadata/id3/CMakeLists.txt
+++ b/metadata/id3/CMakeLists.txt
@@ -9,5 +9,5 @@ add_library(reader_metadata_id3 ${LIBRARY_TYPE} id3_metadata_reader.c)
 
 target_link_libraries(reader_metadata_id3 containers)
 
-install(TARGETS reader_metadata_id3 DESTINATION ${VMCS_PLUGIN_DIR})
+install(TARGETS reader_metadata_id3 DESTINATION ${PLUGIN_DIR})
 
