--- a/mkv/CMakeLists.txt
+++ b/mkv/CMakeLists.txt
@@ -9,5 +9,5 @@ add_library(reader_mkv ${LIBRARY_TYPE} matroska_reader.c)
 
 target_link_libraries(reader_mkv containers)
 
-install(TARGETS reader_mkv DESTINATION ${VMCS_PLUGIN_DIR})
+install(TARGETS reader_mkv DESTINATION ${PLUGIN_DIR})
 
