--- a/mpga/CMakeLists.txt
+++ b/mpga/CMakeLists.txt
@@ -9,5 +9,5 @@ add_library(reader_mpga ${LIBRARY_TYPE} mpga_reader.c)
 
 target_link_libraries(reader_mpga containers)
 
-install(TARGETS reader_mpga DESTINATION ${VMCS_PLUGIN_DIR})
+install(TARGETS reader_mpga DESTINATION ${PLUGIN_DIR})
 
