--- a/qsynth/CMakeLists.txt
+++ b/qsynth/CMakeLists.txt
@@ -9,5 +9,5 @@ add_library(reader_qsynth ${LIBRARY_TYPE} qsynth_reader.c)
 
 target_link_libraries(reader_qsynth containers)
 
-install(TARGETS reader_qsynth DESTINATION ${VMCS_PLUGIN_DIR})
+install(TARGETS reader_qsynth DESTINATION ${PLUGIN_DIR})
 
