--- a/rtp/CMakeLists.txt
+++ b/rtp/CMakeLists.txt
@@ -13,5 +13,5 @@ add_library(reader_rtp ${LIBRARY_TYPE} ${rtp_SRCS})
 
 target_link_libraries(reader_rtp containers)
 
-install(TARGETS reader_rtp DESTINATION ${VMCS_PLUGIN_DIR})
+install(TARGETS reader_rtp DESTINATION ${PLUGIN_DIR})
 
