--- a/wav/CMakeLists.txt
+++ b/wav/CMakeLists.txt
@@ -9,5 +9,5 @@ add_library(reader_wav ${LIBRARY_TYPE} wav_reader.c)
 
 target_link_libraries(reader_wav containers)
 
-install(TARGETS reader_wav DESTINATION ${VMCS_PLUGIN_DIR})
+install(TARGETS reader_wav DESTINATION ${PLUGIN_DIR})
 
