fsv reader: wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,8 @@ set(container_readers ${container_readers} reader_qsynth)
 add_subdirectory(simple)
 set(container_readers ${container_readers} reader_simple)
 set(container_writers ${container_writers} writer_simple)
+add_subdirectory(fsv)
+set(container_readers ${container_readers} reader_fsv)
 add_subdirectory(raw)
 set(container_readers ${container_readers} reader_raw_video)
 set(container_writers ${container_writers} writer_raw_video)
