Make the build customisable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
+project(containers)
+cmake_minimum_required(VERSION 3.05)
+
+include (GNUInstallDirs)
+
 SET( SOURCE_DIR . )
 
 # We support building both static and shared libraries
@@ -9,15 +14,30 @@ if (${LIBRARY_TYPE} STREQUAL STATIC)
 add_definitions(-DENABLE_CONTAINERS_STANDALONE)
 endif (${LIBRARY_TYPE} STREQUAL STATIC)
 
+# Utility function for adding container modules
+function (containers_add_module new_TARGET new_SRCS new_DEFS)
+separate_arguments(new_DEFS)
+add_definitions (${new_DEFS})
+separate_arguments(new_SRCS)
+if (${LIBRARY_TYPE} STREQUAL STATIC)
+set (module_SRCS ${module_SRCS} ${new_SRCS} PARENT_SCOPE)
+else ()
+set(CMAKE_SHARED_LIBRARY_PREFIX "")
+add_library (${new_TARGET} ${LIBRARY_TYPE} ${new_SRCS})
+target_link_libraries (${new_TARGET} containers)
+install (TARGETS ${new_TARGET} DESTINATION ${PLUGIN_DIR})
+endif ()
+endfunction()
+
 # Make sure the compiler can find the necessary include files
 include_directories (${SOURCE_DIR}/..)
 
 # Needed for the container loader
 set(PLUGIN_DIR plugins)
-add_definitions(-DDL_PATH_PREFIX=\\\"${PLUGIN_DIR}/\\\")
+add_definitions(-DDL_PATH_PREFIX="${PLUGIN_DIR}/")
 
 SET( GCC_COMPILER_FLAGS -Wall -g -O2 -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wcast-qual -Wwrite-strings -Wundef )
-SET( GCC_COMPILER_FLAGS ${GCC_COMPILER_FLAGS} -Wextra )#-Wno-missing-field-initializers )
+SET( GCC_COMPILER_FLAGS ${GCC_COMPILER_FLAGS} -fPIC -Wextra )#-Wno-missing-field-initializers )
 SET( GCC_COMPILER_FLAGS ${GCC_COMPILER_FLAGS} -std=c99 -D_POSIX_C_SOURCE=200809L )
 SET( GCC_COMPILER_FLAGS ${GCC_COMPILER_FLAGS} -Wno-missing-field-initializers )
 SET( GCC_COMPILER_FLAGS ${GCC_COMPILER_FLAGS} -Wno-unused-value )
@@ -38,14 +58,34 @@ set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_uri.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_bits.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_list.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_index.c)
+set(core_HEADERS ${core_HEADERS} ${SOURCE_DIR}/containers.h)
+set(core_HEADERS ${core_HEADERS} ${SOURCE_DIR}/containers_codecs.h)
+set(core_HEADERS ${core_HEADERS} ${SOURCE_DIR}/containers_types.h)
+set(core_HEADERS ${core_HEADERS} ${SOURCE_DIR}/packetizers.h)
+set(core_HEADERS ${core_HEADERS} ${SOURCE_DIR}/core/containers_io.h)
 
 # Containers io library
+option(DISABLE_IO_ALL "Disable all IO modules" OFF)
+if (NOT DISABLE_IO_ALL OR DEFINED ENABLE_IO_FILE)
 set(io_SRCS ${io_SRCS} ${SOURCE_DIR}/io/io_file.c)
+add_definitions( -DENABLE_CONTAINER_IO_FILE )
+endif ()
+if (NOT DISABLE_IO_ALL OR DEFINED ENABLE_IO_NULL)
 set(io_SRCS ${io_SRCS} ${SOURCE_DIR}/io/io_null.c)
+add_definitions( -DENABLE_CONTAINER_IO_NULL )
+endif ()
+if (NOT DISABLE_IO_ALL OR DEFINED ENABLE_IO_NET)
 set(io_SRCS ${io_SRCS} ${SOURCE_DIR}/io/io_net.c)
+add_definitions( -DENABLE_CONTAINER_IO_NET )
+endif ()
+if (NOT DISABLE_IO_ALL OR DEFINED ENABLE_IO_PKTFILE)
 set(io_SRCS ${io_SRCS} ${SOURCE_DIR}/io/io_pktfile.c)
+add_definitions( -DENABLE_CONTAINER_IO_PKTFILE )
+endif ()
+if (NOT DISABLE_IO_ALL OR DEFINED ENABLE_IO_HTTP)
 set(io_SRCS ${io_SRCS} ${SOURCE_DIR}/io/io_http.c)
 add_definitions( -DENABLE_CONTAINER_IO_HTTP )
+endif ()
 
 # Containers net library
 if (DEFINED MSVC)
@@ -64,73 +104,63 @@ add_custom_target(containers_net_extra ALL
 
 # Packetizers library
 set(packetizers_SRCS ${packetizers_SRCS} ${SOURCE_DIR}/core/packetizers.c)
+option(DISABLE_PACKETIZER_ALL "Disable all packetizer modules" OFF)
+if (NOT DISABLE_PACKETIZER_ALL OR DEFINED ENABLE_PACKETIZER_MPGA)
 set(packetizers_SRCS ${packetizers_SRCS} ${SOURCE_DIR}/mpga/mpga_packetizer.c)
+endif ()
+if (NOT DISABLE_PACKETIZER_ALL OR DEFINED ENABLE_PACKETIZER_MPGV)
 set(packetizers_SRCS ${packetizers_SRCS} ${SOURCE_DIR}/mpgv/mpgv_packetizer.c)
+endif ()
+if (NOT DISABLE_PACKETIZER_ALL OR DEFINED ENABLE_PACKETIZER_PCM)
 set(packetizers_SRCS ${packetizers_SRCS} ${SOURCE_DIR}/pcm/pcm_packetizer.c)
+endif ()
+if (NOT DISABLE_PACKETIZER_ALL OR DEFINED ENABLE_PACKETIZER_AVC1)
 set(packetizers_SRCS ${packetizers_SRCS} ${SOURCE_DIR}/h264/avc1_packetizer.c)
+endif ()
+if (NOT DISABLE_PACKETIZER_ALL OR DEFINED ENABLE_PACKETIZER_NALU)
 set(packetizers_SRCS ${packetizers_SRCS} ${SOURCE_DIR}/h264/nalu_parser.c)
+endif ()
 
-add_library(containers ${LIBRARY_TYPE} ${core_SRCS} ${io_SRCS} ${net_SRCS} ${packetizers_SRCS})
-target_link_libraries(containers dl)
-install(TARGETS containers DESTINATION lib)
+function (containers_link_library_if_static LIBTOLINK)
+if (${LIBRARY_TYPE} STREQUAL STATIC)
+target_link_libraries(containers ${LIBTOLINK})
+endif (${LIBRARY_TYPE} STREQUAL STATIC)
+endfunction()
 
-set(container_readers)
-set(container_writers)
 
 # Container modules
-add_subdirectory(mp4)
-set(container_readers ${container_readers} reader_mp4)
-set(container_writers ${container_writers} writer_mp4)
-add_subdirectory(mpeg)
-set(container_readers ${container_readers} reader_ps)
-set(container_readers ${container_readers} reader_ts)
-add_subdirectory(mpga)
-set(container_readers ${container_readers} reader_mpga)
-add_subdirectory(binary)
-set(container_readers ${container_readers} reader_binary)
-set(container_writers ${container_writers} writer_binary)
-add_subdirectory(mkv)
-set(container_readers ${container_readers} reader_mkv)
-add_subdirectory(wav)
-set(container_readers ${container_readers} reader_wav)
-add_subdirectory(asf)
-set(container_readers ${container_readers} reader_asf)
-set(container_writers ${container_writers} writer_asf)
-add_subdirectory(flash)
-set(container_readers ${container_readers} reader_flv)
-add_subdirectory(avi)
-set(container_readers ${container_readers} reader_avi)
-set(container_writers ${container_writers} writer_avi)
-add_subdirectory(rtp)
-set(container_readers ${container_readers} reader_rtp)
-add_subdirectory(rtpdump)
-set(container_readers ${container_readers} reader_rtpdump)
-set(container_writers ${container_writers} writer_rtpdump)
-add_subdirectory(rtsp)
-set(container_readers ${container_readers} reader_rtsp)
-add_subdirectory(rcv)
-set(container_readers ${container_readers} reader_rcv)
-add_subdirectory(rv9)
-set(container_readers ${container_readers} reader_rv9)
-add_subdirectory(qsynth)
-set(container_readers ${container_readers} reader_qsynth)
-add_subdirectory(simple)
-set(container_readers ${container_readers} reader_simple)
-set(container_writers ${container_writers} writer_simple)
-add_subdirectory(fsv)
-set(container_readers ${container_readers} reader_fsv)
-add_subdirectory(raw)
-set(container_readers ${container_readers} reader_raw_video)
-set(container_writers ${container_writers} writer_raw_video)
-add_subdirectory(dummy)
-set(container_writers ${container_writers} writer_dummy)
+option(DISABLE_CONTAINER_ALL "Disable all container modules" OFF)
+include(mp4/CMakeLists.txt)
+include(mpeg/CMakeLists.txt)
+include(mpga/CMakeLists.txt)
+include(binary/CMakeLists.txt)
+include(mkv/CMakeLists.txt)
+include(wav/CMakeLists.txt)
+include(asf/CMakeLists.txt)
+include(flash/CMakeLists.txt)
+include(avi/CMakeLists.txt)
+include(rtp/CMakeLists.txt)
+include(rtpdump/CMakeLists.txt)
+include(rtsp/CMakeLists.txt)
+include(rcv/CMakeLists.txt)
+include(rv9/CMakeLists.txt)
+include(qsynth/CMakeLists.txt)
+include(simple/CMakeLists.txt)
+include(fsv/CMakeLists.txt)
+include(raw/CMakeLists.txt)
+include(dummy/CMakeLists.txt)
+include(metadata/id3/CMakeLists.txt)
 
-add_subdirectory(metadata/id3)
-set(container_readers ${container_readers} reader_metadata_id3)
+# The core library
+add_library(containers ${LIBRARY_TYPE} ${core_SRCS} ${io_SRCS} ${net_SRCS} ${packetizers_SRCS} ${module_SRCS})
+if (NOT ${LIBRARY_TYPE} STREQUAL STATIC)
+target_link_libraries(containers dl)
+endif ()
+install(TARGETS containers DESTINATION lib)
 
-if (${LIBRARY_TYPE} STREQUAL STATIC)
-target_link_libraries(containers ${container_readers} ${container_writers})
-endif (${LIBRARY_TYPE} STREQUAL STATIC)
+install(FILES ${core_HEADERS} DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/containers)
 
-# Test apps
+option(DISABLE_TESTS "Disable tests" OFF)
+if (NOT DISABLE_TESTS)
 add_subdirectory(test)
+endif (NOT DISABLE_TESTS)
