--- a/binary/CMakeLists.txt
+++ b/binary/CMakeLists.txt
@@ -1,19 +1,15 @@
-# Container module needs to go in as a plugins so different prefix
-# and install path
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
+set(reader_SOURCE "binary/binary_reader.c")
+set(reader_DEFS "-DENABLE_CONTAINER_READER_BINARY")
+set(writer_SOURCE "binary/binary_writer.c")
+set(writer_DEFS "-DENABLE_CONTAINER_WRITER_BINARY")
 
-# Make sure the compiler can find the necessary include files
-include_directories (../..)
 
-add_library(reader_binary ${LIBRARY_TYPE} binary_reader.c)
+option(ENABLE_READER_BINARY "Enable BINARY reader" OFF)
+if (NOT DISABLE_CONTAINER_ALL OR ENABLE_READER_BINARY)
+containers_add_module(reader_binary ${reader_SOURCE} ${reader_DEFS})
+endif ()
 
-target_link_libraries(reader_binary containers)
-
-install(TARGETS reader_binary DESTINATION ${PLUGIN_DIR})
-
-add_library(writer_binary ${LIBRARY_TYPE} binary_writer.c)
-
-target_link_libraries(writer_binary containers)
-
-install(TARGETS writer_binary DESTINATION ${PLUGIN_DIR})
-
+option(ENABLE_WRITER_BINARY "Enable BINARY writer" OFF)
+if (NOT DISABLE_CONTAINER_ALL OR ENABLE_WRITER_BINARY)
+containers_add_module(writer_binary ${writer_SOURCE} ${writer_DEFS})
+endif ()
