--- a/metadata/id3/CMakeLists.txt
+++ b/metadata/id3/CMakeLists.txt
@@ -1,13 +1,7 @@
-# Container module needs to go in as a plugins so different prefix
-# and install path
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
+set(reader_SOURCE "metadata/id3/id3_metadata_reader.c")
+set(reader_DEFS "-DENABLE_CONTAINER_READER_METADATA_ID3")
 
-# Make sure the compiler can find the necessary include files
-include_directories (../..)
-
-add_library(reader_metadata_id3 ${LIBRARY_TYPE} id3_metadata_reader.c)
-
-target_link_libraries(reader_metadata_id3 containers)
-
-install(TARGETS reader_metadata_id3 DESTINATION ${PLUGIN_DIR})
-
+option(ENABLE_READER_METADATA_ID3 "Enable ID3 metadata reader" OFF)
+if (NOT DISABLE_CONTAINER_ALL OR ENABLE_READER_METADATA_ID3)
+containers_add_module(reader_metadata_id3 ${reader_SOURCE} ${reader_DEFS})
+endif ()
