--- a/avi/CMakeLists.txt
+++ b/avi/CMakeLists.txt
@@ -1,19 +1,14 @@
-# Container module needs to go in as a plugins so different prefix
-# and install path
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
+set(reader_SOURCE "avi/avi_reader.c")
+set(reader_DEFS "-DENABLE_CONTAINER_READER_AVI")
+set(writer_SOURCE "avi/avi_writer.c")
+set(writer_DEFS "-DENABLE_CONTAINER_WRITER_AVI")
 
-# Make sure the compiler can find the necessary include files
-include_directories (../..)
+option(ENABLE_READER_AVI "Enable AVI reader" OFF)
+if (NOT DISABLE_CONTAINER_ALL OR ENABLE_READER_AVI)
+containers_add_module(reader_avi ${reader_SOURCE} ${reader_DEFS})
+endif ()
 
-add_library(reader_avi ${LIBRARY_TYPE} avi_reader.c)
-
-target_link_libraries(reader_avi containers)
-
-install(TARGETS reader_avi DESTINATION ${PLUGIN_DIR})
-
-add_library(writer_avi ${LIBRARY_TYPE} avi_writer.c)
-
-target_link_libraries(writer_avi containers)
-
-install(TARGETS writer_avi DESTINATION ${PLUGIN_DIR})
-
+option(ENABLE_WRITER_AVI "Enable AVI writer" OFF)
+if (NOT DISABLE_CONTAINER_ALL OR ENABLE_WRITER_AVI)
+containers_add_module(writer_avi ${writer_SOURCE} ${writer_DEFS})
+endif ()
