--- a/raw/CMakeLists.txt
+++ b/raw/CMakeLists.txt
@@ -1,18 +1,14 @@
-# Container module needs to go in as a plugins so different prefix
-# and install path
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
+set(reader_SOURCE "raw/raw_video_reader.c")
+set(reader_DEFS "-DENABLE_CONTAINER_READER_RAWVIDEO")
+set(writer_SOURCE "raw/raw_video_writer.c")
+set(writer_DEFS "-DENABLE_CONTAINER_WRITER_RAWVIDEO")
 
-# Make sure the compiler can find the necessary include files
-include_directories (../..)
+option(ENABLE_READER_RAWVIDEO "Enable RAW VIDEO reader" OFF)
+if (NOT DISABLE_CONTAINER_ALL OR ENABLE_READER_RAWVIDEO)
+containers_add_module(reader_raw_video ${reader_SOURCE} ${reader_DEFS})
+endif ()
 
-add_library(reader_raw_video ${LIBRARY_TYPE} raw_video_reader.c)
-
-target_link_libraries(reader_raw_video containers)
-
-install(TARGETS reader_raw_video DESTINATION ${PLUGIN_DIR})
-
-add_library(writer_raw_video ${LIBRARY_TYPE} raw_video_writer.c)
-
-target_link_libraries(writer_raw_video containers)
-
-install(TARGETS writer_raw_video DESTINATION ${PLUGIN_DIR})
+option(ENABLE_WRITER_RAWVIDEO "Enable RAW VIDEO writer" OFF)
+if (NOT DISABLE_CONTAINER_ALL OR ENABLE_WRITER_RAWVIDEO)
+containers_add_module(writer_raw_video ${writer_SOURCE} ${writer_DEFS})
+endif ()
