--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,3 +69,11 @@ install(TARGETS containers_test_bits DESTINATION bin)
 # Generate packet file dump application
 add_executable(containers_dump_pktfile dump_pktfile.c)
 install(TARGETS containers_dump_pktfile DESTINATION bin)
+
+add_test(NAME regression
+    COMMAND containers_regression -vv)
+add_custom_target(test_memcheck
+    COMMAND ${CMAKE_CTEST_COMMAND}
+        --force-new-ctest-process --test-action memcheck
+    COMMAND cat "${CMAKE_BINARY_DIR}/Testing/Temporary/MemoryChecker.*.log"
+    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
