mp4: add metadata support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_io.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_io_helpers.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_codecs.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_utils.c)
+set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_metadata.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_writer_utils.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_loader.c)
 set(core_SRCS ${core_SRCS} ${SOURCE_DIR}/core/containers_filters.c)
